--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#4b86b4 </color>
+    <color name="colorPrimaryDark">#2a4d69 </color>
+    <color name="colorAccent">#adcbe3 </color>
+
+    <!-- #2a4d69 #4b86b4 #adcbe3 #e7eff6 #63ace5 -->
 </resources>
