--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,9 @@
     <color name="colorPrimaryDark">#2a4d69 </color>
     <color name="colorAccent">#adcbe3 </color>
 
+    <color name="circular_image_border_color">#757575</color>
+    <color name="item_happy_place_description_text_color">#606060</color>
+    <color name="detail_screen_description_text_color">#757575</color>
+
     <!-- #2a4d69 #4b86b4 #adcbe3 #e7eff6 #63ace5 -->
 </resources>
