--- a/app/src/main/res/layout/activity_happy_place_detail.xml
+++ b/app/src/main/res/layout/activity_happy_place_detail.xml
@@ -68,6 +68,29 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_description"
                 tools:text="Location" />
+
+            <!--TODO : Add Map Intent (Step 4: Add a button component to launch the Map Screen.)-->
+            <!--START-->
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_view_on_map"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="@dimen/detail_screen_btn_view_on_map_marginStartEnd"
+                android:layout_marginTop="@dimen/detail_screen_btn_view_on_map_marginTop"
+                android:layout_marginEnd="@dimen/detail_screen_btn_view_on_map_marginStartEnd"
+                android:background="@drawable/shape_button_rounded"
+                android:gravity="center"
+                android:paddingTop="@dimen/detail_screen_btn_view_on_map_PaddingTopBottom"
+                android:paddingBottom="@dimen/detail_screen_btn_view_on_map_PaddingTopBottom"
+                android:text="View on map"
+                android:textColor="@color/white_color"
+                android:textSize="@dimen/detail_screen_btn_view_on_map_text_size"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_location" />
+            <!--END-->
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
