--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="No happy place found yet. PLease add one"
+        android:text="No happy place found yet. Please add one"
         android:textSize="16sp"
         android:visibility="visible"
         tools:visibility="visible" />
